fixes scrollbar spacing

--- a/grantly/src/App.scss
+++ b/grantly/src/App.scss
@@ -16,3 +16,23 @@ $color: red;
 .bookmark {
   text-align: right;
 }
+
+/* Scrollbar styles */
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-track {
+  border: 1px solid #3db8b3;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #3db8b3;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #77d4d0;
+}
